--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+server.max-http-header-size=10MB
 
