--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-server.max-http-header-size=10MB
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
