--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = mitreedi@gmail.com
+spring.mail.password = yzkxuugxqjdgswre
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
